--- a/client/src/Components/MainSection/Post/Post.module.css
+++ b/client/src/Components/MainSection/Post/Post.module.css
@@ -282,11 +282,14 @@
   margin: 4px;
   box-sizing: border-box;
   padding: 4px;
+  font: inherit;
   font-size: 15px;
+  resize: none;
 }
 
 .CommentInput:focus {
   outline: none;
+  background-color: var(--nord4);
 }
 
 .Comment {
